# se02

./: README.md  pyproject.toml
000.OG/: OPERATION_GUIDE.md  PROPOSAL_ALIGNMENT.md
configs/: experiment.demo.yaml  experiment.full.yaml  rewrite_rules.yaml  sdk_matrix.yaml
data/demo/docs/pennylane/0.32.0/: release_notes.txt
data/demo/docs/pennylane/0.35.1/: release_notes.txt
data/demo/docs/pennylane/0.44.1/: operator_arithmetic.txt  release_notes.txt
data/demo/docs/qiskit/0.45.3/: release_notes.txt
data/demo/docs/qiskit/1.0.2/: migration_features.txt  migration_guide.txt
data/demo/docs/qiskit/2.0.3/: migration_guide.txt
data/demo/tasks/: qcircuitbench_demo.jsonl  qiskit_humaneval_demo.jsonl
docs/: SCREENSHOT_INDEX.md
outputs/demo-quantum-api-drift_20260320_140837/: drift_break_rate.csv  error_taxonomy.csv  executions.jsonl  summary_metrics.csv
outputs/demo-quantum-api-drift_20260320_141826/: generations.jsonl  rag_gain.csv  report.html
src/quantum_api_drift_lab/: cli.py  config.py  orchestrator.py  types.py
src/quantum_api_drift_lab/analysis/: metrics.py  report_builder.py
src/quantum_api_drift_lab/benchmark/: loaders.py
src/quantum_api_drift_lab/execution/: backends.py
src/quantum_api_drift_lab/llm/: providers.py
src/quantum_api_drift_lab/rag/: retriever.py
src/quantum_api_drift_lab/rewrite/: engine.py
src/quantum_api_drift_lab/ui/: gradio_app.py
src/quantum_api_drift_lab/utils/: io.py
tests/: test_classifier.py  test_metrics.py  test_rewrite.py
